# xops

./: .gitignore  README.md  setup.sh
controllers/attach_supervisor/: attach_supervisor.py
controllers/mavic_drone/: mavic_drone.py
controllers/tashi_drone/: config.py  requirements.txt  tashi_drone.py  tashi_manager.py  web_client.py
controllers/tashi_drone/xops/: delivery_state.py  locations.py  marketplace_manager.py  reputation_system.py
controllers/tashi_server/: requirements.txt  tashi_server.py
controllers/xops_supervisor/: xops_supervisor.py
mavic_test/controllers/mavic_drone/: mavic_drone.py
mavic_test/worlds/: .mavic.wbproj  mavic.wbt
tashi-tools/: Cargo.toml
tashi-tools/src/: lib.rs
utils/: generate_config.py
web/: next.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/health/: route.ts
web/app/api/orders/: route.ts
web/components/: app-sidebar.tsx  create-order-dialog.tsx  fleet-panel.tsx  marketplace-stats.tsx  order-history-table.tsx  order-table.tsx
web/lib/: query-client.ts
web/lib/api/: requests.ts
web/lib/models/: dashboard.ts  marketplace.ts  order.ts
web/lib/server/: order-store.ts
worlds/: .xops-city.wbproj  mavic.wbt  sample.wbt  xops-city.wbt
